--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
     img.logo {
       width: 400px;
       max-width: 95vw;
+      padding: 2em;
     }
     h1 {
       font-weight: normal;
     }
     .center {
-      padding-top: 4em;
+      padding-top: 8em;
       text-align: center;
       position: absolute;
       margin: auto;
