--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="center">
       <img class="logo" src="Logo_Gray_800.png" onmouseover="this.src='Logo_Tan_800.png'" onmouseout="this.src='Logo_Gray_800.png'" />
       <p>
-        Ride the Line. Live <strong class="kayotic">Kayotic</strong>.
+        From Hide to Ride.
       </p>
     </div>
   </body>
