--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     img.logo {
       width: 400px;
       max-width: 95vw;
-      padding: 2em;
+      padding-bottom: 2em;
+      padding-top: 2em; 
     }
     h1 {
       font-weight: normal;
